--- a/RandomDeckGenerator/Controls/PluginsMenuItem.xaml
+++ b/RandomDeckGenerator/Controls/PluginsMenuItem.xaml
@@ -1,8 +1,9 @@
-﻿<MenuItem x:Class="Finnock.HDT.Plugins.RandomDeckGenerator.Controls.RandomDeckGeneratorMenu"
+﻿<MenuItem x:Class="Finnock.HDT.Plugins.RandomDeckGenerator.Controls.PluginsMenuItem"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         mc:Ignorable="d"
-        Header="Random Deck Generator">
+        Header="Random Deck Generator"
+        Click="MenuItem_Click">
 </MenuItem>
